feature: google firebase auth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BombCatcher</string>
     <string name="start">START</string>
+    <string name="web_client_id">562444186357-h0hd0s0jt8ka0n8fi60g67l1ffrhdmo9.apps.googleusercontent.com</string>
 </resources>
