feature: code refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <string name="app_name">BombCatcher</string>
     <string name="start">START</string>
     <string name="web_client_id">562444186357-h0hd0s0jt8ka0n8fi60g67l1ffrhdmo9.apps.googleusercontent.com</string>
-    <string name="new_record">YOUR NEW RECORD</string>
+    <string name="new_record">YOUR NEW SCORE</string>
     <string name="your_score">YOUR SCORE</string>
     <string name="leader_board">Leaderboard</string>
     <string name="please_sign_up">Sign up to compete with the leaders</string>
     <string name="sign_up">SIGN UP</string>
+
+
 </resources>
