--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="please_sign_up">Sign up to compete with the leaders</string>
     <string name="sign_up">SIGN UP</string>
     <string name="empty_lead_board">YOU\'RE THE FIRST</string>
-
+    <string name="game_paused">GAME PAUSED</string>
 </resources>
