--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="game_paused">GAME PAUSED</string>
     <string name="settings">SETTINGS</string>
     <string name="mode">Mode</string>
+    <string name="big">Big</string>
 </resources>
